Eerste versie voorstel

--- a/voorstel/SchrursRuben-bpvoorstel.tex
+++ b/voorstel/SchrursRuben-bpvoorstel.tex
@@ -23,11 +23,11 @@
 \academicyear{2022-2023} % TODO: pas het academiejaar aan
 
 % TODO: Werktitel
-\title{Vul hier de voorgestelde titel van je onderzoek in}
+\title{De impact van 3D interactie op e-commerce: een vergelijkende studie en proof of concept}
 
 % TODO: Studentnaam en emailadres invullen
-\author{Ernst Aarden}
-\email{ernst.aarden@student.hogent.be}
+\author{Ruben Schrurs}
+\email{ruben.schrurs@student.hogent.be}
 
 % TODO: Medestudent
 % Gaat het om een bachelorproef in samenwerking met een student in een andere
@@ -36,7 +36,7 @@
 % \email{yasmine.alaoui@student.hogent.be}
 
 % TODO: Geef de co-promotor op
-\supervisor[Co-promotor]{S. Beekman (Synalco, \href{mailto:sigrid.beekman@synalco.be}{sigrid.beekman@synalco.be})}
+\supervisor[Co-promotor]{K. Dewaegenaere (Officient.io, \href{mailto:dewaegenaere.kenzo@gmail.com}{dewaegenaere.kenzo@gmail.com})}
 
 % Binnen welke specialisatierichting uit 3TI situeert dit onderzoek zich?
 % Kies uit deze lijst:
@@ -50,12 +50,12 @@
 %   zelf
 %
 \specialisation{Mobile \& Enterprise development}
-\keywords{Scheme, World Wide Web, $\lambda$-calculus}
+\keywords{Three.js, E-commerce, 3D JavaScript framework}
 
 \begin{document}
 
 \begin{abstract}
-  Hier schrijf je de samenvatting van je voorstel, als een doorlopende tekst van één paragraaf. Let op: dit is geen inleiding, maar een samenvattende tekst van heel je voorstel met inleiding (voorstelling, kaderen thema), probleemstelling en centrale onderzoeksvraag, onderzoeksdoelstelling (wat zie je als het concrete resultaat van je bachelorproef?), voorgestelde methodologie, verwachte resultaten en meerwaarde van dit onderzoek (wat heeft de doelgroep aan het resultaat?).
+ In deze bachelorproef zal er onderzocht worden of het gebruik van 3D interactie een meerwaarde biedt aan e-commerce. Voor het eerste deel van het onderzoek zal onderzocht worden wat Three.js juist is en hoe dit 3D Javascript framework werkt. Vervolgens zal een PoC gemaakt worden dat bestaat uit twee webshops met een identieke inhoud, eenmaal op een conventionele manier en eenmaal m.b.v. Three.js. In het derde deel van het onderzoek zal een vergelijkende studie uitgevoerd worden tussen de twee webshops a.d.h.v. UX metrics. Hieruit moet blijken of het implementeren van 3D interactie een positieve invloed heeft op de user experience in e-commerce.
 \end{abstract}
 
 \tableofcontents
