--- a/voorstel/voorstel.bib
+++ b/voorstel/voorstel.bib
@@ -1,31 +1,45 @@
-% Encoding: UTF-8
 
-@Article{SabiEtAl2016,
-  author       = {Sabi, Humphrey M. and Uzoka, Faith-Michael E. and Langmia, Kehbuma and Njeh, Felix M.},
-  title        = {Conceptualizing a model for adoption of cloud computing in education},
-  journaltitle = {International Journal of Information Management},
-  year         = {2016},
-  volume       = {36},
-  number       = {2},
-  pages        = {183--191},
-  doi          = {10.1016/j.ijinfomgt.2015.11.010},
-  url          = {http://www.sciencedirect.com/science/article/pii/S0268401215001115},
+
+
+@InCollection{Danchilla2012,
+  author        = {Danchilla, Brian},
+  booktitle     = {Beginning WebGL for HTML5},
+  title         = {Three. js framework},
+  pages         = {173--203},
+  publisher     = {Springer},
+  date-added    = {2022-12-14 12:49:22 +0100},
+  date-modified = {2022-12-14 12:49:22 +0100},
+  year          = {2012},
 }
 
-@Online{LewisFowler2014,
-  author    = {Lewis, James and Fowler, Martin},
-  title     = {Microservices: a definition of this new architectural term},
-  date      = {2014-03-25},
-  url       = {http://martinfowler.com/articles/microservices.html},
-  urldate   = {2016-09-01},
+@Book{Matsuda2013,
+  author        = {Matsuda, Kouichi and Lea, Rodger},
+  title         = {WebGL programming guide: interactive 3D graphics programming with WebGL},
+  publisher     = {Addison-Wesley},
+  date-added    = {2022-12-14 12:14:41 +0100},
+  date-modified = {2022-12-14 12:14:41 +0100},
+  year          = {2013},
 }
 
-@Online{Hykes2013,
-  author    = {Solomon Hykes},
-  title     = {The future of Linux Containers (PyCon 2013)},
-  date      = {2013-03-21},
-  url       = {https://www.youtube.com/watch?v=wW9CAH9nSLs},
-  urldate   = {2016-09-01},
+@Book{Albert2013,
+  author    = {Albert, Bill and Tullis, Tom},
+  date      = {2013},
+  title     = {Measuring the user experience: collecting, analyzing, and presenting usability metrics},
+  publisher = {Newnes},
+}
+
+@Book{Banks2017,
+  author    = {Banks, Alex and Porcello, Eve},
+  date      = {2017},
+  title     = {Learning React: functional web development with React and Redux},
+  publisher = {" O'Reilly Media, Inc."},
+}
+
+@Book{Satheesh2015,
+  author    = {Satheesh, Mithun and D'mello, Bruno Joseph and Krol, Jason},
+  date      = {2015},
+  title     = {Web development with MongoDB and NodeJs},
+  publisher = {Packt Publishing Ltd},
 }
 
 @Comment{jabref-meta: databaseType:biblatex;}
