--- a/bachproef/bachproef.bib
+++ b/bachproef/bachproef.bib
@@ -1,28 +1,88 @@
-% Encoding: UTF-8
-@book{Knuth1998,
- author = {Knuth, Donald E.},
- title = {The art of computer programming,  volume 3: (2nd ed.) sorting and searching},
- year = {1998},
- publisher = {Addison Wesley Longman Publishing Co., Inc.},
- address = {Redwood City, CA, USA}
-}
+%% This BibTeX bibliography file was created using BibDesk.
+%% https://bibdesk.sourceforge.io/
 
-@book{Pollefliet2011,
-  author = {Pollefliet, Leen},
-  title = {Schrijven van verslag tot eindwerk: do's en don'ts},
-  year = {2011},
-  publisher = {Academia Press},
-  address = {Gent}
-}
+%% Created for Ruben Schrurs at 2023-05-07 12:00:32 +0200 
 
-@article{Creeger2009,
-  author = {Creeger, Mache},
-  journal = {Communications of the ACM},
-  number = {8},
-  pages = {50--56},
-  title = {{CTO Roundtable: Cloud Computing}},
-  volume = {52},
-  year = {2009}
-}
 
-@Comment{jabref-meta: databaseType:biblatex;}
+%% Saved with string encoding Unicode (UTF-8) 
+
+
+@comment{jabref-meta: databaseType:biblatex;}
+
+
+
+@misc{threejs2023,
+	date-added = {2023-05-07 11:56:16 +0200},
+	date-modified = {2023-05-07 11:57:44 +0200},
+	month = {5},
+	title = {Three.js Documentatie},
+	url = {https://threejs.org/},
+	year = {2023}}
+
+@webpage{Simon2023,
+	author = {Bruno Simon},
+	date-added = {2023-05-06 08:58:44 +0200},
+	date-modified = {2023-05-06 09:00:32 +0200},
+	month = {5},
+	title = {Three.js Journey},
+	url = {https://threejs-journey.com/},
+	year = {2023},
+	bdsk-url-1 = {https://threejs-journey.com/}}
+
+@misc{Sarkar2018,
+	author = {Anup Sarkar},
+	date-added = {2023-05-04 07:40:39 +0200},
+	date-modified = {2023-05-04 07:42:44 +0200},
+	month = {4},
+	title = {Basic Concepts of Node.js},
+	url = {https://medium.com/tensult/basic-concepts-of-node-js-310bb9479fae#:~:text=around%20the%20world.-,Node.,V8%20Engine%20to%20execute%20code.&text=It%20provides%20an%20event%2Ddriven,O%20that%20is%20optimized%20%26%20scalable.},
+	year = {2018},
+	bdsk-url-1 = {https://medium.com/tensult/basic-concepts-of-node-js-310bb9479fae#:~:text=around%20the%20world.-,Node.,V8%20Engine%20to%20execute%20code.&text=It%20provides%20an%20event%2Ddriven,O%20that%20is%20optimized%20%26%20scalable.}}
+
+@misc{Sufiyan2023,
+	author = {Taha Sufiyan},
+	date-added = {2023-04-13 11:12:54 +0200},
+	date-modified = {2023-04-13 11:14:52 +0200},
+	month = {4},
+	title = {Simplilearn},
+	url = {https://www.simplilearn.com/tutorials/nodejs-tutorial/what-is-nodejs#what_is_nodejs},
+	year = {2023},
+	bdsk-url-1 = {https://www.simplilearn.com/tutorials/nodejs-tutorial/what-is-nodejs#what_is_nodejs}}
+
+@misc{NextJS2023,
+	date-added = {2023-04-13 10:28:48 +0200},
+	date-modified = {2023-04-13 10:32:21 +0200},
+	month = {4},
+	title = {Next.js},
+	url = {https://nextjs.org/learn/foundations/from-javascript-to-react/displaying-data-with-props},
+	year = {2023},
+	bdsk-url-1 = {https://nextjs.org/learn/foundations/from-javascript-to-react/displaying-data-with-props}}
+
+@misc{W3Schools2023,
+	date-added = {2023-04-12 15:31:14 +0200},
+	date-modified = {2023-04-13 10:32:27 +0200},
+	month = {4},
+	title = {W3Schools},
+	url = {https://www.w3schools.com/react/react_components.asp#:~:text=Components%20are%20independent%20and%20reusable,will%20concentrate%20on%20Function%20components.},
+	year = {2023},
+	bdsk-url-1 = {https://www.w3schools.com/react/react_components.asp#:~:text=Components%20are%20independent%20and%20reusable,will%20concentrate%20on%20Function%20components.}}
+
+@article{Bhupati2021,
+	author = {Bhupati,Venkat and Sai,Indla and Yogeshchandra,Puranik},
+	date-added = {2023-04-12 13:18:55 +0200},
+	date-modified = {2023-04-13 10:32:06 +0200},
+	journal = {International Journal of Trend in Scientific Research and Development (ijtsrd)},
+	month = {6},
+	number = {Issue-4},
+	pages = {pp.1137-1139},
+	title = {Review on React JS},
+	volume = {Volume-5},
+	year = {2021}}
+
+@book{Gackenheimer2015,
+	author = {Gackenheimer, Cory},
+	date-added = {2023-04-11 14:19:24 +0200},
+	date-modified = {2023-04-12 13:42:45 +0200},
+	publisher = {Apress},
+	title = {Introduction to React},
+	year = {2015}}
