--- a/voorstel/voorstel-inhoud.tex
+++ b/voorstel/voorstel-inhoud.tex
@@ -12,9 +12,9 @@ In deze bachelorproef wil ik dus nagaan of het gebruik van 3D interactie in webs
 \section{Literatuurstudie}%
 \label{sec:literatuurstudie}
 
-Over de laatste jaren zijn apparaten en browsers een stuk sterker geworden, dit laat ons toe om 3D renders te maken. Een van de manieren om dit te doen is door WebGL te gebruiken. WebGL is een technologie die ons toelaat om te tekenen, weer te geven en te communiceren met gesofisticeerde interactieve 3D graphics \autocite{Matsuda2013}. Het zwakpunt van WebGL is dat deze technologie steunt op moeilijke wiskunde. Om die reden is WebGL voor veel web-developers, en vaak ook designers, niet gemakkelijk om te leren. Dit is waar Three.js in het verhaal terecht komt, om web-developers de mogelijkheid te geven om efficiënter en gemakkelijker overweg te kunnen met de WebGL library. Om die reden heeft Ricardo Cabello het framework Three.js gemaakt. Three.js beschikt over meerdere tekenmethodes en kan terugvallen op een 2D visualisatie indien WebGL niet ondersteund is door de browser \autocite{Danchilla2012}.
+Over de laatste jaren zijn apparaten en browsers een stuk sterker geworden, dit laat ons toe om 3D renders te maken. Een van de manieren om dit te doen is door WebGL te gebruiken. WebGL is een technologie die ons toelaat om te tekenen, weer te geven en te communiceren met gesofisticeerde interactieve 3D graphics \autocite{Matsuda2013}. Gebruik maken van WebGL is echter zeer complex doordat een diepe kennis van de innerlijke details van WebGL  nodig is, alsook het beheersen van een complexe shader-taal \autocite{Dirksen:2015aa}. Hierdoor is WebGL dus voor veel web-developers, en vaak ook designers, niet gemakkelijk te leren. Dit is waar Three.js in het verhaal terecht komt, om web-developers de mogelijkheid te geven voor efficiënter en gemakkelijker overweg te kunnen met de WebGL library. Om die reden heeft Ricardo Cabello het framework Three.js gemaakt. Three.js beschikt over meerdere tekenmethodes en kan terugvallen op een 2D visualisatie indien WebGL niet ondersteund is door de browser \autocite{Danchilla2012}.
 
-Three.js is dus een zeer krachtig framework om 3D scenes te creëren in een browser. Alhoewel het gemakkelijker en gebruiksvriendelijker is dan WebGL, is Three.js is nog steeds niet de eerste keuze van web-developers om bijvoorbeeld een webshop te maken. Om een goed beeld te scheppen over welke soort methode de voorkeur zal krijgen bij gebruikers zal er gebruik gemaakt worden van UX metrics.
+Three.js is dus een zeer krachtig framework om 3D scenes te creëren in een browser. Alhoewel het gemakkelijker en gebruiksvriendelijker is dan WebGL, is Three.js nog steeds niet de eerste keuze van web-developers om bijvoorbeeld een webshop te maken. Om een goed beeld te scheppen over welke soort methode de voorkeur zal krijgen bij gebruikers zal er gebruik gemaakt worden van UX metrics.
 
 Statistieken komen overal voor in ons leven en dus ook bij de ervaring van een website-gebruiker. Alle UX metrics moeten kwantificeerbaar en waarneembaar zijn, zo kunnen UX metrics een hulpmiddel zijn om tot een geïnformeerde beslissing te komen en nieuwe inzichten te geven \autocite{Albert2013}.
 
