--- a/bachproef/SchrursRubenBP.tex
+++ b/bachproef/SchrursRubenBP.tex
@@ -49,13 +49,13 @@
 
 %%---------- Document metadata -------------------------------------------------
 % TODO: Replace this with your own information
-\author{Ernst Aarden}
-\supervisor{Dhr. F. Van Houte}
-\cosupervisor{Mevr. S. Beeckman}
+\author{Ruben Schrurs}
+\supervisor{Dhr. T. Antjon}
+\cosupervisor{Dhr. K. Dewaegenaere }
 \title[Optionele ondertitel]%
-    {Titel van de bachelorproef}
+    {De impact van 3D interactie op e-commerce: een vergelijkende studie en proof-of-concept}
 \academicyear{\advance\year by -1 \the\year--\advance\year by 1 \the\year}
-\examperiod{1}
+\examperiod{2}
 \degreesought{\IfLanguageName{dutch}{Professionele bachelor in de toegepaste informatica}{Bachelor of applied computer science}}
 \partialthesis{false} %% To display 'in partial fulfilment'
 %\institution{Internshipcompany BVBA.}
@@ -137,9 +137,9 @@
 % vormen. De structuur en titels hangen af van je eigen onderzoek. Je kan bv.
 % elke fase in je onderzoek in een apart hoofdstuk bespreken.
 
-%\input{...}
-%\input{...}
-%...
+\input{proofofconceptConventioneel}
+\input{proofofconceptThreeJS}
+
 
 \input{conclusie}
 
