--- a/voorstel/voorstel.bib
+++ b/voorstel/voorstel.bib
@@ -1,45 +1,56 @@
+%% This BibTeX bibliography file was created using BibDesk.
+%% https://bibdesk.sourceforge.io/
+
+%% Created for Ruben Schrurs at 2023-02-08 14:34:53 +0100 
+
+
+%% Saved with string encoding Unicode (UTF-8) 
+
+
+@comment{jabref-meta: databaseType:biblatex;}
 
 
 
-@InCollection{Danchilla2012,
-  author        = {Danchilla, Brian},
-  booktitle     = {Beginning WebGL for HTML5},
-  title         = {Three. js framework},
-  pages         = {173--203},
-  publisher     = {Springer},
-  date-added    = {2022-12-14 12:49:22 +0100},
-  date-modified = {2022-12-14 12:49:22 +0100},
-  year          = {2012},
-}
+@book{Dirksen:2015aa,
+	author = {Dirksen, Jos},
+	date-added = {2023-02-08 14:16:34 +0100},
+	date-modified = {2023-02-08 14:34:45 +0100},
+	publisher = {Packt Publishing Ltd},
+	title = {Learning Three. js--the JavaScript 3D Library for WebGL},
+	year = {2015}}
 
-@Book{Matsuda2013,
-  author        = {Matsuda, Kouichi and Lea, Rodger},
-  title         = {WebGL programming guide: interactive 3D graphics programming with WebGL},
-  publisher     = {Addison-Wesley},
-  date-added    = {2022-12-14 12:14:41 +0100},
-  date-modified = {2022-12-14 12:14:41 +0100},
-  year          = {2013},
-}
+@incollection{Danchilla2012,
+	author = {Danchilla, Brian},
+	booktitle = {Beginning WebGL for HTML5},
+	date-added = {2022-12-14 12:49:22 +0100},
+	date-modified = {2022-12-14 12:49:22 +0100},
+	pages = {173--203},
+	publisher = {Springer},
+	title = {Three. js framework},
+	year = {2012}}
 
-@Book{Albert2013,
-  author    = {Albert, Bill and Tullis, Tom},
-  date      = {2013},
-  title     = {Measuring the user experience: collecting, analyzing, and presenting usability metrics},
-  publisher = {Newnes},
-}
+@book{Matsuda2013,
+	author = {Matsuda, Kouichi and Lea, Rodger},
+	date-added = {2022-12-14 12:14:41 +0100},
+	date-modified = {2022-12-14 12:14:41 +0100},
+	publisher = {Addison-Wesley},
+	title = {WebGL programming guide: interactive 3D graphics programming with WebGL},
+	year = {2013}}
 
-@Book{Banks2017,
-  author    = {Banks, Alex and Porcello, Eve},
-  date      = {2017},
-  title     = {Learning React: functional web development with React and Redux},
-  publisher = {" O'Reilly Media, Inc."},
-}
+@book{Albert2013,
+	author = {Albert, Bill and Tullis, Tom},
+	date = {2013},
+	publisher = {Newnes},
+	title = {Measuring the user experience: collecting, analyzing, and presenting usability metrics}}
 
-@Book{Satheesh2015,
-  author    = {Satheesh, Mithun and D'mello, Bruno Joseph and Krol, Jason},
-  date      = {2015},
-  title     = {Web development with MongoDB and NodeJs},
-  publisher = {Packt Publishing Ltd},
-}
+@book{Banks2017,
+	author = {Banks, Alex and Porcello, Eve},
+	date = {2017},
+	publisher = {" O'Reilly Media, Inc."},
+	title = {Learning React: functional web development with React and Redux}}
 
-@Comment{jabref-meta: databaseType:biblatex;}
+@book{Satheesh2015,
+	author = {Satheesh, Mithun and D'mello, Bruno Joseph and Krol, Jason},
+	date = {2015},
+	publisher = {Packt Publishing Ltd},
+	title = {Web development with MongoDB and NodeJs}}
